Adding 'accept of terms' flag in the patron create endpoints.
