# api/swagger/swaggerDoc.yaml
@@ -627,6 +627,9 @@ definitions:
       pin:
         type: string
         example: '1234'
+      acceptTerms:
+        type: boolean
+        example: true
   PatronsCreatorDataV02:
     required:
       - names
@@ -761,6 +764,9 @@ definitions:
       homeLibraryCode:
         type: string
         example: eb
+      acceptTerms:
+        type: boolean
+        example: true
   PatronsCreatorResponseV02:
     type: object
     properties:
